--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
+    "tailwindcss-filters": "^3.0.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
